--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/react-jsonschema-form/dist/react-jsonschema-form.js"></script>
   </head>
   <body>
     <noscript>
